fixed class name style overlapping

--- a/src/style/navbar.css
+++ b/src/style/navbar.css
@@ -7,32 +7,32 @@
   font-size: 1.2rem;
   border-radius: 100px;
 
-  & .logo {
+  & .siteLogo {
     width: 10%;
     margin: 1em;
     text-transform: uppercase;
     margin-left: 2rem;
   }
 
-  & .logo a,
+  & .siteLogo a,
   .links a,
   .resume a {
     color: #872c2c;
   }
 
-  & .logo a:link,
+  & .siteLogo a:link,
   .links a:link,
   .resume a:link {
     text-decoration: none;
   }
 
-  & .logo a:hover,
+  & .siteLogo a:hover,
   .links a:hover,
   .resume a:hover {
     color: white;
   }
 
-  & .logo a:active,
+  & .siteLogo a:active,
   .links a:active,
   .resume a:active {
     color: white;
